@@ -1086,16 +1086,26 @@ var groupFunction = function () {
  * @param {TODO} condition
  * @param {TODO} initial
  * @param {Function|Code} reduce
+ * @param {Function|Code} finalize
  * @param {Boolean} command
  * @param {Function} callback
  */
 
-Collection.prototype.group = function group (keys, condition, initial, reduce, command, callback) {
+Collection.prototype.group = function group (keys, condition, initial, reduce, finalize, command, callback) {
   var args = Array.prototype.slice.call(arguments, 3);
   callback = args.pop();
+  // Fetch all commands
   reduce = args.length ? args.shift() : null;
+  finalize = args.length ? args.shift() : null;
   command = args.length ? args.shift() : null;
 
+  // Make sure we are backward compatible
+  if(!(typeof finalize == 'function')) {
+    command = finalize;
+    finalize = null;
+  }
+
+  // Fetch the Code class to avoid circular dependencies
   var Code = this.db.bson_serializer.Code
   
   if (!Array.isArray(keys) && keys instanceof Object && typeof(keys) !== 'function') {
@@ -1104,6 +1114,10 @@ Collection.prototype.group = function group (keys, condition, initial, reduce, c
 
   if(reduce instanceof Function) {
     reduce = reduce.toString();
+  }
+  
+  if(finalize instanceof Function) {
+    finalize = finalize.toString();
   }
   
   if(command) {
@@ -1117,9 +1131,12 @@ Collection.prototype.group = function group (keys, condition, initial, reduce, c
         , '$reduce': reduceFunction
         , 'cond': condition
         , 'initial': initial
-      }
+      }      
     };
 
+    // if finalize is defined
+    if(finalize != null) selector.group['finalize'] = finalize;
+    // Set up group selector
     if ('function' === typeof keys) {
       selector.group.$keyf = keys instanceof Code
         ? keys
@@ -1133,7 +1150,7 @@ Collection.prototype.group = function group (keys, condition, initial, reduce, c
     }
 
     var cmd = DbCommand.createDbCommand(this.db, selector);
-
+    
     this.db._executeQueryCommand(cmd, {read:true}, function (err, result) {
       if (err) return callback(err);
       
